[package]
name = "day2"
version = "0.1.0"
authors = ["John Batty <john.batty@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
recap = "0.1.1"
serde = "1.0.117"
