[package]
name = "day5"
version = "0.1.0"
authors = ["John Batty <john.batty@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
lazy_static = "1.4.0"
recap = "0.1.1"
regex = "1.4.2"
serde = "1.0.117"
